--- a/Savio/TermsAndConditionView/DataProtectionPolicy.xib
+++ b/Savio/TermsAndConditionView/DataProtectionPolicy.xib
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Light.otf">
-            <string>GothamRounded-Light</string>
-        </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
         </mutableArray>
         <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
@@ -54,9 +51,12 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences" secureTextEntry="YES"/>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zp-wc-6gL">
-                            <rect key="frame" x="8" y="510" width="560" height="27"/>
+                            <rect key="frame" x="10" y="510" width="560" height="40"/>
                             <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="ee9-rn-sSA"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
                             <state key="normal" title="Back">
                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
@@ -81,17 +81,18 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="4zp-wc-6gL" firstAttribute="top" secondItem="HVG-fE-0ko" secondAttribute="bottom" constant="24" id="0QI-bL-Wh8"/>
                         <constraint firstItem="6lc-gf-cFv" firstAttribute="top" secondItem="Zfu-Ja-0iP" secondAttribute="top" constant="40" id="1F6-Q7-rWr"/>
-                        <constraint firstAttribute="trailing" secondItem="4zp-wc-6gL" secondAttribute="trailing" constant="12" id="7Xz-Aa-2TN"/>
                         <constraint firstItem="HVG-fE-0ko" firstAttribute="leading" secondItem="Zfu-Ja-0iP" secondAttribute="leading" constant="10" id="9sU-1g-LOM"/>
                         <constraint firstAttribute="trailing" secondItem="HVG-fE-0ko" secondAttribute="trailing" constant="10" id="HrD-6r-0aU"/>
-                        <constraint firstItem="4zp-wc-6gL" firstAttribute="leading" secondItem="Zfu-Ja-0iP" secondAttribute="leadingMargin" id="SwH-gN-2U4"/>
+                        <constraint firstItem="4zp-wc-6gL" firstAttribute="centerX" secondItem="Zfu-Ja-0iP" secondAttribute="centerX" id="HvU-ED-OrR"/>
                         <constraint firstItem="9KT-wl-Jhc" firstAttribute="top" secondItem="6lc-gf-cFv" secondAttribute="bottom" constant="15" id="WUu-Dl-AGf"/>
                         <constraint firstItem="9KT-wl-Jhc" firstAttribute="leading" secondItem="Zfu-Ja-0iP" secondAttribute="leading" constant="10" id="Z3O-Cm-634"/>
+                        <constraint firstAttribute="trailing" secondItem="4zp-wc-6gL" secondAttribute="trailing" constant="10" id="Zk9-Wi-VfV"/>
                         <constraint firstItem="6lc-gf-cFv" firstAttribute="leading" secondItem="9KT-wl-Jhc" secondAttribute="leading" id="gpS-kc-aqc"/>
                         <constraint firstItem="HVG-fE-0ko" firstAttribute="top" secondItem="9KT-wl-Jhc" secondAttribute="bottom" constant="3" id="hFu-qh-Ee6"/>
+                        <constraint firstItem="4zp-wc-6gL" firstAttribute="leading" secondItem="Zfu-Ja-0iP" secondAttribute="leading" constant="10" id="hXE-ZN-tRK"/>
                         <constraint firstItem="HVG-fE-0ko" firstAttribute="centerY" secondItem="Zfu-Ja-0iP" secondAttribute="centerY" id="j0h-gn-vB9"/>
+                        <constraint firstItem="4zp-wc-6gL" firstAttribute="top" secondItem="HVG-fE-0ko" secondAttribute="bottom" constant="24" id="leY-4h-e3d"/>
                     </constraints>
                 </view>
             </subviews>
@@ -106,6 +107,7 @@
                 <outlet property="backButton" destination="4zp-wc-6gL" id="cW3-j6-x8k"/>
                 <outlet property="dataPolicyAndTermsTextView" destination="HVG-fE-0ko" id="gGB-xp-Rxu"/>
             </connections>
+            <point key="canvasLocation" x="370" y="320"/>
         </view>
     </objects>
 </document>
