--- a/Savio/Base.lproj/LaunchScreen.storyboard
+++ b/Savio/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="mz1-s8-RAU">
+                                <rect key="frame" x="243" y="236" width="115" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="WOg-xW-RMJ"/>
+                                    <constraint firstAttribute="width" secondItem="mz1-s8-RAU" secondAttribute="height" multiplier="115:128" id="d95-dI-fGD"/>
+                                    <constraint firstAttribute="width" constant="115" id="ffe-XQ-abo"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94117647058823528" green="0.63137254901960782" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="mz1-s8-RAU" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4wC-k7-V0I"/>
+                            <constraint firstItem="mz1-s8-RAU" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bT8-dl-Y15"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +39,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash-logo.png" width="115" height="128"/>
+    </resources>
 </document>
