--- a/Savio/LogoAnimation/ImageViewAnimation.xib
+++ b/Savio/LogoAnimation/ImageViewAnimation.xib
@@ -15,7 +15,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-OZ-4w0">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-OZ-4w0">
                     <rect key="frame" x="262" y="263" width="75" height="75"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="75" id="EC4-i6-rqV"/>
