--- a/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
+++ b/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
@@ -36,14 +36,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
-                    <rect key="frame" x="258" y="25" width="85" height="85"/>
+                    <rect key="frame" x="281" y="50" width="40" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="85" id="Esx-OH-HMA"/>
-                        <constraint firstAttribute="height" constant="85" id="dpE-lk-Vzi"/>
+                        <constraint firstAttribute="width" constant="40" id="Esx-OH-HMA"/>
+                        <constraint firstAttribute="height" constant="40" id="dpE-lk-Vzi"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
-                    <rect key="frame" x="160" y="105" width="280" height="100"/>
+                    <rect key="frame" x="160" y="110" width="280" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="RN8-F7-ylq"/>
                         <constraint firstAttribute="width" constant="280" id="vID-Rp-pBv"/>
@@ -53,7 +53,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
-                    <rect key="frame" x="140" y="213" width="320" height="21"/>
+                    <rect key="frame" x="140" y="218" width="320" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="9it-s9-tPB"/>
                         <constraint firstAttribute="height" constant="21" id="l7o-Kk-oDK"/>
@@ -71,7 +71,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
-                    <rect key="frame" x="30" y="372" width="540" height="40"/>
+                    <rect key="frame" x="30" y="377" width="540" height="40"/>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="Jx5-lP-BpK"/>
@@ -91,7 +91,7 @@
                     </connections>
                 </button>
                 <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
-                    <rect key="frame" x="30" y="209" width="540" height="40"/>
+                    <rect key="frame" x="30" y="214" width="540" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="1h3-uh-xpX"/>
                         <constraint firstAttribute="height" constant="40" id="end-TZ-Q6z"/>
@@ -108,7 +108,7 @@
                     </connections>
                 </textField>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
-                    <rect key="frame" x="253" y="304" width="95" height="30"/>
+                    <rect key="frame" x="253" y="274" width="95" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="I4p-wr-5do"/>
                         <constraint firstAttribute="width" constant="95" id="iC4-aq-eXZ"/>
@@ -129,7 +129,7 @@
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
-                    <rect key="frame" x="277" y="425" width="46" height="20"/>
+                    <rect key="frame" x="277" y="441" width="46" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="1RL-Te-PCX"/>
                         <constraint firstAttribute="width" constant="46" id="cL4-h2-iRW"/>
@@ -150,7 +150,7 @@
                     </connections>
                 </button>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
-                    <rect key="frame" x="171" y="190" width="258" height="21"/>
+                    <rect key="frame" x="171" y="195" width="258" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ef4-W7-OZY"/>
                         <constraint firstAttribute="width" constant="258" id="tNL-i6-SX6"/>
@@ -167,9 +167,9 @@
                 <constraint firstItem="GpB-HN-YI8" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5ie-b5-abX"/>
                 <constraint firstItem="0wM-Li-Y8L" firstAttribute="top" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="18" id="6d7-X8-5dK"/>
                 <constraint firstItem="F0n-B1-XQp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7nX-sf-fQh"/>
-                <constraint firstItem="0wM-Li-Y8L" firstAttribute="top" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="13" id="FF8-U8-Egj"/>
+                <constraint firstItem="0wM-Li-Y8L" firstAttribute="top" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="24" id="FF8-U8-Egj"/>
                 <constraint firstItem="0wM-Li-Y8L" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="L4q-WT-nP8"/>
-                <constraint firstItem="Oqd-I4-ww3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="LgF-dt-sY0"/>
+                <constraint firstItem="Oqd-I4-ww3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="LgF-dt-sY0"/>
                 <constraint firstItem="Oqd-I4-ww3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="0.5" id="Mu8-hz-wJE"/>
                 <constraint firstItem="F0n-B1-XQp" firstAttribute="top" secondItem="8DL-NG-yGU" secondAttribute="bottom" constant="167" id="NE6-6n-UwK"/>
                 <constraint firstItem="aKg-ku-OcO" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NwS-IL-xii"/>
@@ -178,10 +178,10 @@
                 <constraint firstItem="YnB-er-ZmT" firstAttribute="top" secondItem="GpB-HN-YI8" secondAttribute="bottom" constant="-44" id="dDN-da-IsZ"/>
                 <constraint firstAttribute="bottom" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="140" id="eAX-3h-kLx"/>
                 <constraint firstItem="F0n-B1-XQp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="gIq-00-wAk"/>
-                <constraint firstItem="aKg-ku-OcO" firstAttribute="top" secondItem="Vat-uq-VUl" secondAttribute="bottom" constant="55" id="h3H-zH-nut"/>
+                <constraint firstItem="aKg-ku-OcO" firstAttribute="top" secondItem="Vat-uq-VUl" secondAttribute="bottom" constant="20" id="h3H-zH-nut"/>
                 <constraint firstAttribute="trailing" secondItem="F0n-B1-XQp" secondAttribute="trailing" constant="30" id="hxf-gm-KuS"/>
                 <constraint firstItem="Vat-uq-VUl" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="i8e-TS-1JO"/>
-                <constraint firstItem="8DL-NG-yGU" firstAttribute="top" secondItem="Oqd-I4-ww3" secondAttribute="bottom" constant="-5" id="oS5-LR-dNB"/>
+                <constraint firstItem="8DL-NG-yGU" firstAttribute="top" secondItem="Oqd-I4-ww3" secondAttribute="bottom" constant="20" id="oS5-LR-dNB"/>
                 <constraint firstItem="Vat-uq-VUl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="wVH-9a-gzn"/>
                 <constraint firstItem="YnB-er-ZmT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="yvz-LR-eYa"/>
                 <constraint firstItem="GpB-HN-YI8" firstAttribute="top" secondItem="8DL-NG-yGU" secondAttribute="bottom" constant="8" id="zRG-ex-x4I"/>
