--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
@@ -48,25 +48,14 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-qH-aIi">
-                            <rect key="frame" x="258" y="25" width="85" height="85"/>
+                            <rect key="frame" x="281" y="50" width="40" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="85" id="B6C-5l-EPx"/>
-                                <constraint firstAttribute="width" constant="85" id="r3Q-Hz-W0D"/>
+                                <constraint firstAttribute="height" constant="40" id="B6C-5l-EPx"/>
+                                <constraint firstAttribute="width" constant="40" id="r3Q-Hz-W0D"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
-                            <rect key="frame" x="30" y="230" width="540" height="40"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="p0G-oz-jq5"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
-                            <connections>
-                                <outlet property="delegate" destination="-1" id="BSG-8O-Nyd"/>
-                            </connections>
-                        </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caz-QS-qcK">
-                            <rect key="frame" x="30" y="330" width="540" height="40"/>
+                            <rect key="frame" x="30" y="344" width="540" height="40"/>
                             <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="KBk-hQ-wP7"/>
@@ -80,7 +69,7 @@
                             </connections>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter 4 digit passcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aa7-UQ-9QT">
-                            <rect key="frame" x="164" y="210" width="273" height="21"/>
+                            <rect key="frame" x="164" y="224" width="273" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="8J8-52-nbC"/>
                                 <constraint firstAttribute="width" constant="273" id="uu8-m4-hoK"/>
@@ -90,7 +79,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-PM-TIF">
-                            <rect key="frame" x="30" y="280" width="540" height="40"/>
+                            <rect key="frame" x="30" y="294" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="wrx-jD-Wft"/>
                             </constraints>
@@ -101,7 +90,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dxE-82-rRE">
-                            <rect key="frame" x="277" y="390" width="46" height="30"/>
+                            <rect key="frame" x="277" y="404" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="46" id="IEI-n0-zVG"/>
                                 <constraint firstAttribute="height" constant="30" id="r4z-dK-HxN"/>
@@ -121,6 +110,17 @@
                                 <action selector="onclickBackButton:" destination="-1" eventType="touchUpInside" id="EAp-Tw-cgb"/>
                             </connections>
                         </button>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
+                            <rect key="frame" x="30" y="244" width="540" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="p0G-oz-jq5"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="BSG-8O-Nyd"/>
+                            </connections>
+                        </textField>
                     </subviews>
                     <constraints>
                         <constraint firstItem="Aa7-UQ-9QT" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="1Dk-E1-FeX"/>
@@ -132,19 +132,27 @@
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="PMY-q7-eTH"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="RfY-3f-Da8"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="TNd-fm-YIk"/>
-                        <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="25" id="U33-fX-z18"/>
+                        <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="50" id="U33-fX-z18"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="Vt5-RQ-uC6"/>
                         <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" constant="0.5" id="YdO-Xd-1KC"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="119" id="ZUp-F3-4fu"/>
-                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="100" id="bde-7G-8RC"/>
+                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="140" id="bde-7G-8RC"/>
+                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="25" id="dJg-3l-JaX"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="dhz-ho-e6v"/>
                         <constraint firstAttribute="bottom" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="220" id="g7H-sB-5rP"/>
                         <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="jgA-dG-GE9"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="10" id="nOa-Si-waG"/>
+                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="5" id="tbb-Dv-yTH"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="vX3-mx-Hkf"/>
-                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="120" id="w7A-Pw-Lyh"/>
+                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="150" id="w7A-Pw-Lyh"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="y8p-1a-sXA"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="w7A-Pw-Lyh"/>
+                            <exclude reference="bde-7G-8RC"/>
+                        </mask>
+                    </variation>
                     <connections>
                         <outlet property="delegate" destination="-1" id="Cap-rP-ifM"/>
                     </connections>
